# petscagent-bench

./: .gitmodules  EVALUATION_SYSTEM_SUMMARY.md  MOTIVATION.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
config/: coding_agent_exp_config.yaml  evaluation_config.yaml  green_agent_config.yaml  purple_agent_config.yaml
data/: Advection.json  Darcyflow.json  NS2D.json  Robertson.json  Robertson.jsonl  Rosenbrock.json  Rosenbrock.jsonl  problems_test.jsonl  veccuda.json  veckok.json  vecmpi.json
dockerfiles/: Dockerfile.client-cli  Dockerfile.green-agent  Dockerfile.petsc-mcp-servers  Dockerfile.purple-agent
evaluators/: deprecationuse.py  error.py
examples/: evaluation_example.py
gpu_data/: veccuda.json  veckok.json
src/: client_cli.py  launcher.py
src/coding_agent_exp/: __init__.py  agent.py
src/evaluators/: README.md  __init__.py  base.py  pipeline.py
src/evaluators/gates/: __init__.py  api_usage_gate.py  compilation_gate.py  execution_gate.py  memory_safety_gate.py
src/evaluators/metrics/: __init__.py  execution_time.py  numerical_accuracy.py
src/evaluators/quality/: __init__.py
src/evaluators/quality/algorithm_quality/: __init__.py  algorithm_appropriateness.py  solver_choice.py
src/evaluators/quality/code_quality/: __init__.py  code_style.py  (+2 more)
src/green_agent/: agent.py  executor.py  green_agent.toml  mcp_client.py  server.py
src/metrics/: __init__.py  aggregation.py  types.py
src/purple_agent/: petsc_agent.py
src/util/: a2a_comm.py  llm_client.py  my_a2a.py
src/white_agent/: makefile  petsc_agent.py
(+4 files in other folders)
